# ArgParseX

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  argpx.c  argpx.h  configure.sh  parser.c  parser.h
.github/workflows/: compile_test.yaml
benchmark/: Makefile  README.md  bm_argpx.c  bm_getopt.c  bm_sample.inc
cmake/: FindRust.cmake
docs/: README.md  callback.md  flag.md  flag_group.md  flow.md  index.md  naming.md  result.md  style.md  support_goal.md
example/: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  a.c  make.sh  test.c  test.sh  test_e2e.sh  test_hyperfine.sh
impl_c/: CMakeLists.txt  argpx.c
impl_rust/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
impl_rust/src/: attribute.rs  flag.rs  lib.rs  parser.rs  results.rs  style.rs
include/: argpx.h  argpx_rs.h
include/argpx/: argpx.h
source/: argpx.c  argpx_hash.c  argpx_hash.h
